--- a/Models/Speech_LLM/2024.06.08_VALL-E2.md
+++ b/Models/Speech_LLM/2024.06.08_VALL-E2.md
@@ -53,9 +53,11 @@ See https://aka.ms/valle2 for demos of ***VALL-E 2***.
 ## 1.Introduction: 引言
 
 Text-to-speech synthesis (TTS) aims to generate high-quality speech from text input with a high degree of clarity and intelligibility.
-Along with the progress of deep learning, significant improvements have been made in TTS research in recent years \citep{DBLP:conf/icassp/ShenPWSJYCZWRSA18,DBLP:conf/aaai/Li0LZL19,DBLP:conf/nips/RenRTQZZL19}.  Some systems, trained with clean single-speaker speech data recorded in sound-recording studios, have even achieved human-level quality for single-speaker speech generation \citep{10409539}.
+Along with the progress of deep learning, significant improvements have been made in TTS research in recent years \citep{DBLP:conf/icassp/ShenPWSJYCZWRSA18,DBLP:conf/aaai/Li0LZL19,DBLP:conf/nips/RenRTQZZL19}.
+
+Some systems, trained with clean single-speaker speech data recorded in sound-recording studios, have even achieved human-level quality for single-speaker speech generation \citep{10409539}.
 However, zero-shot TTS, which requires the model to synthesize speech for unseen speakers using a short enrolled speech sample during inference, remains a challenging problem.
->
+
 Our previous work, VALL-E \citep{wang2023neural}, marked a significant breakthrough in this area.
 It is capable of synthesizing personalized speech using only a 3-second recording, while preserving the speaker’s voice, emotion, and acoustic environment.
 VALL-E is a neural codec language model that represents speech signals as discrete codec codes with a neural audio codec model.
@@ -65,7 +67,7 @@ However, VALL-E has two key limitations:
 1) Stability: The random sampling used during inference can lead to instability in output, while nucleus sampling with a small top-p value may cause an infinite loop issue.
 This can be mitigated by multiple-time sampling and subsequent sorting, but this approach increases the computational cost.
 2) Efficiency: The autoregressive architecture of VALL-E is bound to the same high frame rate as the off-the-shelf audio codec model, which cannot be adjusted, resulting in a slower inference speed.
->
+
 Several follow-up works have been proposed to address these problems \citep{song2024ella,xin2024rall,borsos2023soundstorm, le2024voicebox,ju2024naturalspeech}.
 To improve stability, some works leverage text-speech alignment information in model training and inference \citep{song2024ella,xin2024rall}.
 These methods, relying on a forced-alignment model, inevitably introduces errors in the alignment result, which could affect the final performance.
@@ -73,7 +75,7 @@ It also complicates the overall architecture and increases the burden for data s
 To improve modeling efficiency, some works explore fully non-autoregressive methods for zero-shot TTS \citep{borsos2023soundstorm, le2024voicebox,ju2024naturalspeech}.
 However, these methods require frame-aligned text-speech data for model training, facing the same problem as discussed before.
 Additionally, the non-autoregressive model generates the tokens with a pre-determined duration result, which constrains the search space of the generated speech and sacrifices the prosody and naturalness.
->
+
 In this work, we propose ***VALL-E 2***, the first human parity zero-shot text-to-speech synthesis system.
 Building upon its predecessor VALL-E, ***VALL-E 2*** employs a neural codec language modeling method for speech synthesis and incorporates two key modifications: repetition aware sampling and grouped code modeling.
 Repetition aware sampling, an improvement over the random sampling used in VALL-E, adaptively employs either random or nucleus sampling for each time step token prediction.
@@ -81,16 +83,18 @@ This selection is based on the token repetition in the decoding history, enhanci
 Grouped code modeling, on the other hand, partitions the codec codes into groups, each of which is modeled in a single frame in the AR modeling process.
 This approach not only accelerates inference by reducing the sequence length but also improves performance by mitigating the long context modeling problem.
 Notably, ***VALL-E 2*** requires only simple utterance-wise speech-transcription pair data for training, greatly simplifying the process of collecting and processing training data and facilitating potential scalability.
->
+
 ***VALL-E 2*** is trained on the large-scale Libriheavy dataset \citep{kang2024libriheavy}.
 Subsequent evaluations demonstrate that it achieves performance on par with human capabilities on both the in-domain LibriSpeech dataset \citep{panayotov2015librispeech} and the out-of-domain VCTK datasets \citep{veaux2016superseded}.
 As illustrated in Figure \ref{fig:valle2_abs}, ***VALL-E 2*** significantly outperforms VALL-E and other prior works on the LibriSpeech dataset in terms of robustness, naturalness, and similarity score, even achieving human parity performance.
 The numbers in Figure \ref{fig:valle2_abs} are relative numbers ($\vartriangle \text{Score} (\text{Model}) = \text{Score} (\text{Model}) - \text{Score} (\text{GroundTruth})$) based on the results reported in the paper.
-In this context, human parity indicates that the robustness, naturalness, and similarity metrics of ***VALL-E 2*** surpass those of the ground truth samples (meaning that $\vartriangle \text{WERR} (\text{VALL-E 2}) 0$, $\vartriangle \text{CMOS} (\text{VALL-E 2}) 0$, and $\vartriangle \text{SMOS} (\text{VALL-E 2}) 0$), meaning that VALL-E 2 can generate accurate, natural speech in the exact voice of the original speaker, comparable to human performance.  It is important to note that this conclusion is drawn solely from experimental results on the LibriSpeech and VCTK datasets.
+In this context, human parity indicates that the robustness, naturalness, and similarity metrics of ***VALL-E 2*** surpass those of the ground truth samples (meaning that $\vartriangle \text{WERR} (\text{VALL-E 2}) 0$, $\vartriangle \text{CMOS} (\text{VALL-E 2}) 0$, and $\vartriangle \text{SMOS} (\text{VALL-E 2}) 0$), meaning that VALL-E 2 can generate accurate, natural speech in the exact voice of the original speaker, comparable to human performance.
+ It is important to note that this conclusion is drawn solely from experimental results on the LibriSpeech and VCTK datasets.
 Moreover, ***VALL-E 2*** can accelerate the decoding process by multiple times with almost no performance degradation.
-To specifically evaluate the stability of ***VALL-E 2***, we synthesize speech for complex sentences that are hard to read or contain many repeated phrases, and found that ***VALL-E 2*** can always stably generate high-quality speech.  The benefits of this work could support meaningful initiatives, such as generating speech for individuals with aphasia or people with amyotrophic lateral sclerosis.
+To specifically evaluate the stability of ***VALL-E 2***, we synthesize speech for complex sentences that are hard to read or contain many repeated phrases, and found that ***VALL-E 2*** can always stably generate high-quality speech.
+ The benefits of this work could support meaningful initiatives, such as generating speech for individuals with aphasia or people with amyotrophic lateral sclerosis.
 We encourage the reader to listen to our samples on the demo page \url{https://aka.ms/valle2}.
->
+
 VALL-E 2 is purely a research project.
 Currently, we have no plans to incorporate VALL-E 2 into a product or expand access to the public.
 VALL-E 2 could synthesize speech that maintains speaker identity and could be used for educational learning, entertainment, journalistic, self-authored content, accessibility features, interactive voice response systems, translation, chatbot, and so on.
@@ -107,14 +111,14 @@ If you suspect that VALL-E 2 is being used in a manner that is abusive or illega
 Early work in zero-shot TTS typically employed speaker adaptation and speaker encoding methods, which often required additional fine-tuning, complex pre-designed features, or heavy structure engineering \citep{DBLP:conf/iclr/ChenASBRZWCTLGO19, DBLP:conf/interspeech/WangTFYWZ20,DBLP:conf/nips/ArikCPPZ18,casanova2022yourtts}.
 Inspired by the success of Large Language Models (LLMs) in natural language processing, VALL-E \citep{wang2023neural, zhang2023speak} represented speech as discrete codec codes with an off-the-shelf neural codec model, and approached TTS as a conditional codec language modeling task.
 This approach allowed VALL-E to train a codec language model on large-scale training data and perform zero-shot TTS via prompting, achieving significant zero-shot TTS capability.
->
+
 This breakthrough inspired subsequent research works to address zero-shot TTS through a language modeling approach.
 For instance, VALL-E X \citep{zhang2023speak} extended VALL-E to cross-lingual TTS tasks with an additional language ID token.
 SPEAR-TTS \citep{kharitonov2023speak} and Make-a-voice \citep{huang2023make} leveraged semantic units from a speech self-supervised model as an intermediate interface between text and acoustic codec codes, enabling better training data efficiency.
 Mega-TTS \citep{jiang2023mega} and Mega-TTS 2 \citep{jiang2023mega2} proposed to first disentangle the multiple attributes in speech, then only model partial attributes with a language modeling approach.
 ELLA-V \citep{song2024ella} and RALL-E \citep{xin2024rall} improved VALL-E's robustness and stability by including speech-text alignment prediction into the decoding process.
 UniAudio \citep{yang2023uniaudio} and BASE TTS \citep{lajszczak2024base} further explored scaling the codec language model to 1b parameters and 100k hours of training data.
->
+
 Meanwhile, other works explored fully non-autoregressive modeling methods to accelerate the inference speed.
 For example, Soundstorm \citep{borsos2023soundstorm} leveraged the confidence-based parallel decoding scheme \citep{chang2022maskgit} to generate the acoustic codec codes with a non-autoregressive model.
 StyleTTS 2 \citep{li2024styletts}, UniCATS \citep{du2024unicats}, NaturalSpeech 2 \citep{shen2023naturalspeech} and NaturalSpeech 3 \citep{ju2024naturalspeech} used diffusion model \citep{ho2020denoising} for the prompt-conditioned text to speech synthesis.
@@ -129,7 +133,7 @@ For instance, PolyVoice \citep{dong2023polyvoice} adopted VALL-E and built a cod
 SpeechX \citep{wang2023speechx} extended VALL-E with multi-task learning, demonstrating efficacy in zero-shot TTS, noise suppression, target speaker extraction, speech removal, and speech editing tasks.
 In addition to speech generation, VioLA \citep{wang2023viola} further explored codec-based speech models for speech understanding tasks, unifying codec language models for speech recognition, synthesis, and translation tasks.
 AudioPaLM \citep{rubenstein2023audiopalm} fused the codec tokens into the LLM PaLM 2 \citep{anil2023palm}, and demonstrated promising results on speech recognition and translation tasks.
->
+
 These works typically employ SoundStream \citep{zeghidour2021soundstream} and Encodec \citep{defossez2022high}, initially designed for speech compression, as the neural codec model.
 Inspired by these successes, several works have proposed more novel neural codecs specifically for speech processing tasks.
 These include Vocos \citep{siuzdak2023vocos}, SpeechTokenizer \citep{zhang2023speechtokenizer}, AudioDec \citep{wu2023audiodec}, AcademiCodec \citep{yang2023hifi}, Descript-audio-codec (DAC) \citep{kumar2024high}, FunCodec \citep{du2024funcodec}, and RepCodec \citep{huang2023repcodec}.
@@ -144,7 +148,7 @@ Following VALL-E, we use an off-the-shelf neural audio codec model to represent 
 To improve the efficiency, ***VALL-E 2*** introduce a grouped codec language modeling method, where we partition the codec code sequence into groups of a certain size, and model each group of codec codes as one frame.
 In this way, we can get rid of the frame rate constraint of the off-the-shelf neural audio codec model, and reduce the frame rate by integer multiples.
 It is not only beneficial for the inference efficiency but also the overall speech quality by mitigating the long context modeling problem.
->
+
 With TTS training objective, ***VALL-E 2*** is optimized to maximize the likelihood of the grouped code sequence given the text condition.
 Specifically, given an audio sample $\mathbf{y}$ and its corresponding tokenized text transcription $\mathbf{x}  = [ x_0, x_1, \ldots, x_{(L-1)} ]$, where $L$ is the text sequence length, we first use a pre-trained neural audio codec model to convert the audio sample $\mathbf{y}$ into a codec code sequence $\mathbf{C}^{T \times J}  =  [ \mathbf{c}_{0}, \mathbf{c}_{1}, \ldots, \mathbf{c}_{(T-1)} ] $, where $T$ is the code sequence length, $J$ (here $J=8$) is the number of the quantizers in the codec model, and each $\mathbf{c}_{t}$ represents the 8 codes for each time step.
 Then we partition it into the grouped code sequence $\mathbf{C}^{G}  =  [ \mathbf{C}_{0:G}, \mathbf{C}_{G:2G}, \ldots, \mathbf{C}_{(T-G):T} ] $ with the group size $G$, and $\mathbf{C}_{0:G}$ stands for the group $[\mathbf{c}_{0}, \mathbf{c}_{1}, \ldots, \mathbf{c}_{(G-1)}]$.
@@ -184,7 +188,7 @@ The AR model and NAR model have different attention mask strategies: the AR mode
 Figure~\ref{fig:training} shows the overview of ***VALL-E 2*** model training.
 It is noteworthy that the training of ***VALL-E 2*** requires only simple utterance-wise speech-transcription pair data, without any complex data such as force-alignment result or additional audio clips of the same speaker for reference.
 This greatly simplifies the process of collecting and processing training data.
->
+
 Specifically, for each audio and corresponding transcription in the training dataset, we initially utilize the audio codec encoder and text tokenizer to obtain the codec codes $\mathbf{C}  = [ \mathbf{c}_{0}, \mathbf{c}_{1}, \ldots, \mathbf{c}_{(T-1)} ]$ and the text sequence $\mathbf{x}  = [ x_0, x_1, \ldots, x_{(L-1)} ]$, respectively.
 These are then used for the AR model and the NAR model training.
 
@@ -271,7 +275,8 @@ Finally, the target codes is used by the audio codec decoder to synthesize the t
 
 ### Autoregressive Model Inference
 \label{sec:ras}
-We first infer the AR model to generate the first code sequence of the target codes $\mathbf{c}_{\geq T',0}$ conditioned on the text sequence $\mathbf{x}$ and the code prompt $\mathbf{c}_{<T',0}$.  With the grouped codec language modeling method, we feed the grouped code sequence to the AR model and generate each group of target codes in an autoregressive way:
+We first infer the AR model to generate the first code sequence of the target codes $\mathbf{c}_{\geq T',0}$ conditioned on the text sequence $\mathbf{x}$ and the code prompt $\mathbf{c}_{<T',0}$.
+ With the grouped codec language modeling method, we feed the grouped code sequence to the AR model and generate each group of target codes in an autoregressive way:
 \begin{align}
    \mathbf{c}_{\geq T',0} &= \argmax_{\mathbf{c}_{\geq T',0}} p (\mathbf{c}_{\geq T',0} |\mathbf{x}, \mathbf{c}_{<T',0}; \theta_\text{AR}) \\
    &= \argmax_{\mathbf{c}_{\geq T',0}} \sum_{t=T'/G}^{T/G-1} \log p (\mathbf{c}_{t\cdot G: (t+1)\cdot G,0} |\mathbf{x}, \mathbf{c}_{<t\cdot G,0}; \theta_\text{AR}) \\
@@ -299,7 +304,8 @@ Different from the random sampling method used in VALL-E, in this work, we propo
 As detailed in Algorithm~\ref{alg:ras}, given the probability distribution $p (c_{t'} |\mathbf{x}, \mathbf{c}_{<t\cdot G,0}; \theta_\text{AR})$ predicted by the AR model, we first generate the target code $c_{t'}$ by nucleus sampling with a pre-defined top-p value $v$.
 Then, we calculate the repetition ratio  $r$  of token $c_{t'}$ in the preceding code sequence with a window size $K$.
 If the ratio $r$ exceeds a pre-defined repetition threshold ratio  $t_n$, we replace the target code $c_{t'}$ by random sampling from $p (c_{t'} |\mathbf{x}, \mathbf{c}_{<t\cdot G,0}; \theta_\text{AR})$.
-Although the codec codes in one group are modeled in a non-autoregressive way, they are predicted autoregressively so as to calculate the repetition ratio $r$ and switch between these two sampling methods.  With this repetition aware sampling method, the decoding process can not only benefit from the stability of nucleus sampling, but also avoid the infinite loop issue with the help of random sampling.
+Although the codec codes in one group are modeled in a non-autoregressive way, they are predicted autoregressively so as to calculate the repetition ratio $r$ and switch between these two sampling methods.
+ With this repetition aware sampling method, the decoding process can not only benefit from the stability of nucleus sampling, but also avoid the infinite loop issue with the help of random sampling.
 It should be noted that this repetition aware sampling won't increase the decoding latency since the runtime cost of the additional sampling operation is almost negligible compared to the model inference process.
 
 
@@ -362,7 +368,8 @@ Neural TTS systems sometimes experience deletion, insertion, and replacement err
 We perform ASR on the generated audio and calculate the WER with respect to the original transcriptions.
 In this experiment, we employ the open-sourced Conformer-Transducer model\footnote{\url{https://huggingface.co/nvidia/stt_en_conformer_transducer_xlarge}} \citep{gulati2020conformer} as the ASR model.
 
-\textbf{DNSMOS} (Deep Noise Suppression Mean Opinion Score) is used to assess the overall perceived quality of the generated speech~\citep{reddy2021dnsmos}.  Specifically, we use a model trained with ground truth human ratings obtained using ITU-T P.808~\citep{itu2018p}\footnote{\url{https://github.com/microsoft/DNS-Challenge/tree/master/DNSMOS}} to predict the DNSMOS score, which is in the range of $[1,5]$, with a larger value indicating better quality.
+\textbf{DNSMOS} (Deep Noise Suppression Mean Opinion Score) is used to assess the overall perceived quality of the generated speech~\citep{reddy2021dnsmos}.
+ Specifically, we use a model trained with ground truth human ratings obtained using ITU-T P.808~\citep{itu2018p}\footnote{\url{https://github.com/microsoft/DNS-Challenge/tree/master/DNSMOS}} to predict the DNSMOS score, which is in the range of $[1,5]$, with a larger value indicating better quality.
 
 
 ### Evaluation Settings
@@ -493,7 +500,8 @@ GS means group size and RAS stands for repetition aware sampling.
 
 \begin{table}[t]
 \centering
-\caption{Subjective evaluation results for 40 speakers on LibriSpeech test-clean, using a reference utterance as a prompt for each speaker. \label{table:mos_librispeech} }
+\caption{Subjective evaluation results for 40 speakers on LibriSpeech test-clean, using a reference utterance as a prompt for each speaker.
+\label{table:mos_librispeech} }
 \begin{tabular}{lccccccccccc}
 \toprule
 System & GroupSize && SMOS$\uparrow$ & CMOS$\uparrow$ \\
@@ -525,7 +533,8 @@ With group code modeling method, ***VALL-E 2*** can also achieve better performa
 \begin{table*}[t]
 \centering
 \caption{Ablation study of model input on LibriSpeech test-clean.
-The symbol \omark denotes that the acoustic condition is not explicitly split during the NAR model training, and the prompt is treated as the prefix of the target code matrix during the NAR model inference. }
+The symbol \omark denotes that the acoustic condition is not explicitly split during the NAR model training, and the prompt is treated as the prefix of the target code matrix during the NAR model inference.
+}
 \label{table:ablation_input_librispeech}
 \resizebox{\textwidth}{!}
 {
@@ -671,7 +680,8 @@ As found in LibriSpeech dataset, the repetition aware sampling method significan
 
 \begin{table}[t]
 \centering
-\caption{Subjective evaluation results for 60 speakers on VCTK. \label{table:mos_vctk} }
+\caption{Subjective evaluation results for 60 speakers on VCTK.
+\label{table:mos_vctk} }
 \resizebox{\textwidth}{!}
 {
 \begin{tabular}{lccccccccccccccccc}
@@ -708,7 +718,8 @@ Thanks to the long context modeling capability of group code modeling method, we
 
 \begin{table*}[t]
 \centering
-\caption{Ablation study of model input on VCTK. }
+\caption{Ablation study of model input on VCTK.
+}
 \label{table:ablation_input_vctk}
 \resizebox{\textwidth}{!}
 {
@@ -773,7 +784,7 @@ A possible explanation is that, with limited model capacity, our model achieves 
 We introduce ***VALL-E 2***, a language modeling approach that achieves human parity zero-shot text to speech synthesis (TTS) for the first time.
 Based on the success of VALL-E, ***VALL-E 2*** introduce two simple but effective methods: repetition aware sampling for better decoding stability and grouped code modeling for better modeling efficiency.
 Furthermore, our observations reveal that ***VALL-E 2*** is capable of reliably synthesizing speech for complex sentences, including those that are challenging to read or contain numerous repeated phrase.
->
+
 \textbf{Broader impacts:} Since ***VALL-E 2*** could synthesize speech that maintains speaker identity, it may carry potential risks in misuse of the model, such as spoofing voice identification or impersonating a specific speaker.
 We conduct the experiments under the assumption that the user agree to be the target speaker in speech synthesis.
 If the model is generalized to unseen speakers in the real world, it should include a protocol to ensure that the speaker approves the use of their voice and a synthesized speech detection model.
