--- a/Models/Speech_Neural_Codec/2023.03.23_LMCodec.md
+++ b/Models/Speech_Neural_Codec/2023.03.23_LMCodec.md
@@ -47,12 +47,12 @@
 
 ## Abstract: 摘要
 
-> We introduce ***LMCodec***, a causal neural speech codec that provides high quality audio at very low bitrates.
-> The backbone of the system is a causal convolutional codec that encodes audio into a hierarchy of coarse-to-fine tokens using residual vector quantization.
-> ***LMCodec*** trains a Transformer language model to predict the fine tokens from the coarse ones in a generative fashion, allowing for the transmission of fewer codes.
-> A second Transformer predicts the uncertainty of the next codes given the past transmitted codes, and is used to perform conditional entropy coding.
-> A MUSHRA subjective test was conducted and shows that the quality is comparable to reference codecs at higher bitrates.
-> Example audio is available at this https [URL](https://mjenrungrot.github.io/chrome-media-audio-papers/publications/lmcodec).
+We introduce ***LMCodec***, a causal neural speech codec that provides high quality audio at very low bitrates.
+The backbone of the system is a causal convolutional codec that encodes audio into a hierarchy of coarse-to-fine tokens using residual vector quantization.
+***LMCodec*** trains a Transformer language model to predict the fine tokens from the coarse ones in a generative fashion, allowing for the transmission of fewer codes.
+A second Transformer predicts the uncertainty of the next codes given the past transmitted codes, and is used to perform conditional entropy coding.
+A MUSHRA subjective test was conducted and shows that the quality is comparable to reference codecs at higher bitrates.
+Example audio is available at this https [URL](https://mjenrungrot.github.io/chrome-media-audio-papers/publications/lmcodec).
 
 我们介绍了 ***LMCodec***, 这是一种因果神经语音编解码器, 能够在极低比特率下提供高质量音频.
 该系统的核心是一个因果卷积编解码器, 它使用残差向量量化将音频编码成从粗到细的层次化 Token.
