--- a/Models/Speech_Neural_Codec/2024.06.11_Single-Codec.md
+++ b/Models/Speech_Neural_Codec/2024.06.11_Single-Codec.md
@@ -40,7 +40,7 @@
 - 引用: 33
 - 被引: 0
 - 数据:
-  - ? 
+  - ?
 - 对比:
   - [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md)
   - [EnCodec](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)
@@ -63,7 +63,7 @@ The effectiveness of Single-Code is further validated by LLM-TTS experiments, sh
 Large language models (LLMs) have attracted wide attention in the speech domain, particularly in text-to-speech synthesis (TTS) ([VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SPEAR-TTS](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)).
 In such LLM-based TTS systems, to operate speech synthesis as a simple next-token prediction problem, the first thing is to seek an appropriate speech codec for speech tokenization and waveform reconstruction.
 Multi-codebook codecs ([EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)), as the SOTA approaches, are widely adopted in LLM-based TTS to achieve superior reconstruction quality.
-However, they also require the LLM to predict multiple discrete sequences, affecting efficiency and stability seriously, although various designs of codec ([SpeechTokenizer](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md); [Language-Codec](../../Models/Speech_Neural_Codec/2024.02.19_Language-Codec.md); [TiCodec](2023.09.15_TiCodec.md)) and LLM ([SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md); [UniAudio](../../Models/Speech_LLM/2023.10.01_UniAudio.md); [MAGNeT](../../Models/Speech_LLM/MAGNeT.md)) are proposed to adapt this multi-sequence discrete representation better.
+However, they also require the LLM to predict multiple discrete sequences, affecting efficiency and stability seriously, although various designs of codec ([SpeechTokenizer](../../Models/Speech_Neural_Codec/2023.08.31_SpeechTokenizer.md); [Language-Codec](../../Models/Speech_Neural_Codec/2024.02.19_Language-Codec.md); [TiCodec](2023.09.15_TiCodec.md)) and LLM ([SoundStorm](../../Models/Speech_LLM/2023.05.16_SoundStorm.md); [UniAudio](../../Models/Speech_LLM/2023.10.01_UniAudio.md); [MAGNeT](../Speech_LLM/2024.01.09_MAGNeT.md)) are proposed to adapt this multi-sequence discrete representation better.
 Hence, seeking an effective approach to obtain the single-sequence discrete speech representation is critical to bypass this limitation.
 
 However, unlike the text, it is impossible to completely represent the speech audio with abundant information in semantics and acoustics with only one discrete token sequence.
@@ -75,7 +75,7 @@ It inspires us to re-think speech codec from the perspective of feature disentan
 
 In this study, we propose a single-codebook neural audio codec, ***Single-Codec***, for high-performance speech generation.
 ***Single-Codec*** performs compression and reconstruction on Mel Spectrogram instead of the raw waveform, enabling efficient compression of speech information while preserving important details, as stated in [Tortoise-TTS](../Diffusion/2023.05.12_TorToise-TTS.md).
-To further enhance the codec performance and applicability to speech synthesis, ***Single-Codec*** incorporates several key components: 
+To further enhance the codec performance and applicability to speech synthesis, ***Single-Codec*** incorporates several key components:
 - A global reference encoder to decouple time-invariant features.
 Specifically, we utilize continuous global representations rather than discrete representations and longer reference segments to capture more acoustic details, enabling embedding sufficient phonetic information into single-codebook discrete units.
 - A BLSTM module for contextual modeling to help discover the correlation between adjacent frames, enhancing speech content clustering efficiency.
@@ -147,7 +147,7 @@ This bottlenecking operation along the time axis encourages the encoder to extra
 
 ### 4.1.Dataset: 数据集
 
-We train speech codecs and a zero-shot TTS system, [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), using five open-source datasets, including [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md), [Hi-Fi TTS](../../Datasets/2021.04.03_Hi-Fi_TTS.md), [VCTK](../../Datasets/2012.08.00_VCTK.md), [AISHELL-1](../../Datasets/2017.09.16_AISHELL-1.md), and [AISHELL3](../../Datasets/2020.10.22_AISHELL-3.md). 
+We train speech codecs and a zero-shot TTS system, [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), using five open-source datasets, including [LibriTTS](../../Datasets/2019.04.05_LibriTTS.md), [Hi-Fi TTS](../../Datasets/2021.04.03_Hi-Fi_TTS.md), [VCTK](../../Datasets/2012.08.00_VCTK.md), [AISHELL-1](../../Datasets/2017.09.16_AISHELL-1.md), and [AISHELL3](../../Datasets/2020.10.22_AISHELL-3.md).
 A total of 1165.3 hours of English and Chinese speech is used.
 
 ### 4.2.Comparison Models: 对比模型
@@ -155,7 +155,7 @@ A total of 1165.3 hours of English and Chinese speech is used.
 We adopt [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with one codebook ([EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-1VQ) and [TiCodec](2023.09.15_TiCodec.md) with one codebook ([TiCodec](2023.09.15_TiCodec.md)-1VQ) and two codebooks ([TiCodec](2023.09.15_TiCodec.md)-2VQ) as the baselines to compare with our proposed ***Single-Codec***.
 For [VALL-E](../../Models/Speech_LLM/2023.01.05_VALL-E.md), we use [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) with one, four, and eight codebooks, representing [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-1VQ, [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-4VQ, and [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md)-8VQ, [TiCodec](2023.09.15_TiCodec.md) with one codebook ([TiCodec](2023.09.15_TiCodec.md)-1VQ) as the baselines to evaluate the performance of codecs on speech synthesis.
 
-To verify the effectiveness of our designed modules in ***Single-Codec***, we conduct ablation studies on the following models. 
+To verify the effectiveness of our designed modules in ***Single-Codec***, we conduct ablation studies on the following models.
 
 - [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md): A basic [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) codec with a discriminator for perceptual loss, the structure and configuration of the [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) codec is similar to that in [Tortoise-TTS](../Diffusion/2023.05.12_TorToise-TTS.md).
 - Ref-short: [VQ-VAE](../../Modules/VQ/2017.11.02_VQ-VAE.md) with a reference encoder that consumes a short segment with 200 frames as input.
@@ -245,4 +245,3 @@ In this paper, we propose ***Single-Codec***, the first single-codebook codec de
 Furthermore, the encoder is enhanced with a BLSTM module for contextual modelling, a hybrid sampling module to alleviate distortion from upsampling and downsampling, and a resampling module to encourage discrete units to carry more phonetic-relevant information with lower short-time variance.
 In experiments, compared with multi-codebook codecs, e.g. [EnCodec](../Speech_Neural_Codec/2022.10.24_EnCodec.md) and [TiCodec](2023.09.15_TiCodec.md), ***Single-Codec*** demonstrates higher speech reconstruction quality with lower bandwidth of only 304bps, and enables a higher-quality LLM-TTS with better naturalness and intelligibility.
 In the future, we will focus on developing a more efficient single-codebook codec for speech reconstruction and speech synthesis.
-
