--- a/Blogs/苏剑林/系列-低秩近似之路.md
+++ b/Blogs/苏剑林/系列-低秩近似之路.md
@@ -6,7 +6,7 @@
 
 因此, 在这个系列文章中, 笔者将试图系统梳理一下矩阵低秩近似相关的理论内容, 以补全对低秩近似的了解.
 
-## 01. 伪逆 (Pseudo Inverse)
+## 01.伪逆 (Pseudo Inverse)
 
 <a id="01"></a>
 
@@ -363,7 +363,7 @@ $$
 
 ---
 
-## 02. 奇异值分解 (Singular Value Decomposition, SVD)
+## 02.奇异值分解 (Singular Value Decomposition, SVD)
 
 <a id="02"></a>
 
@@ -382,6 +382,9 @@ $$
 即找到矩阵 $M$ 的最优 $r$ 秩近似 (秩不超过 $r$ 的最优近似).
 
 ### 结论初探
+
+<details>
+<summary>正文</summary>
 
 对于任意矩阵 $M\in \mathbb{R}^{n\times m}$, 都可以找到如下形式的奇异值分解 (Singular Value Decomposition, SVD):
 
@@ -413,7 +416,12 @@ SVD 的基础理论包括存在性, 计算方法, 与最优低秩近似的练习
 
 ![](Images/2024.10.01.Fig.01.png)
 
+</details>
+
 ### 一些应用
+
+<details>
+<summary>正文</summary>
 
 不管是理论分析还是数值计算, SVD 都有非常广泛的应用, 其背后的原理之一就是常用的矩阵/向量范数对正交变换具有不变性.
 所以 SVD 左右两个正交矩阵夹着中间一个对角矩阵的特点, 往往能用来将很多矩阵相关的优化目标转换为等价的非负对角矩阵特例, 起到简化问题的作用.
@@ -553,7 +561,12 @@ $$
 这将原本一般矩阵 $M$ 的优化问题转化为 $M$ 是非负对角矩阵的特例, 降低了分析难度.
 若 $A,B$ 的秩不超过 $r$, 那么 $AA^{\mathsf{T}}M + MB^{\mathsf{T}}B$ 的秩顶多为 $2r$ (假设 $2r <\min (n,m)$), 所以原始问题也是求 $M$ 的最优 $2r$ 秩近似, 转化为求非负对角矩阵的最优 $2r$ 秩近似.
 
+</details>
+
 ### 理论基础
+
+<details>
+<summary>正文</summary>
 
 在了解 SVD 的作用之后, 就需要补充一些理论证明.
 - 首先确保 SVD 的存在性;
@@ -678,6 +691,8 @@ $$
 
 这表明已经得到了 M 的 SVD 关键部分, 只需要将相应矩阵补零成相应大小, 就得到了完整的 SVD 形式.
 
+</details>
+
 ### 近似定理
 
 最后回到求 $M$ 的最优低秩近似问题.
@@ -739,9 +754,51 @@ $$
 
 值得指出的一点是, Eckart-Young-Mirsky 定理不仅对 $F$ 范数成立, 对谱范数也成立, 后者的证明甚至更简单一点. 可以参阅[维基百科](https://en.wikipedia.org/wiki/Low-rank_approximation).
 
-## 03. Column-Row 近似
+## 03.Column-Row 近似
 
 <a id="03"></a>
 
 - 原文: https://kexue.fm/archives/10427
 - 时间: 2024.10.11
+
+在[02.奇异值分解](#02奇异值分解-singular-value-decomposition-svd)中, 证明了 SVD 可以给出任意矩阵的最优低秩近似.
+这一最优近似是无约束的, 即 SVD 给出的结果只管误差上的最小, 不在乎矩阵的具体结构, 而在很多应用场景中, 出于可解释性或非线性处理等需求, 往往希望得到具有某些特殊结构的近似分解.
+
+从这篇文章开始将探究一些具有特定结构的低秩近似, 本文将聚焦于 CR 近似 (Column-Row Approximation), 提供了加速矩阵乘法运算的一种简单方案.
+
+### 问题背景
+
+矩阵的最优 $r$ 秩近似的一般提法是:
+
+$$
+    \arg\min_{rank(\tilde{M})\leq r} \| \tilde{M} - M \|_F^2
+$$
+
+在前面两篇文章中, 讨论了两种情况:
+1. 伪逆: 如果约定 $\tilde{M}=AB (A\in \mathbb{R}^{n\times r}, B\in \mathbb{M}^{r\times m})$, 且 $A$ 或 $B$ 已经给定, 那么 $\tilde{M}$ 的最优解是 $AA^\dagger M$ (或者 $MB^\dagger B$);
+2. SVD: 如果 $\tilde{M}$ 没有其他约束, 那么 $\tilde{M}$ 的最优解是 $U_{[:,:r]}\Sigma_{[:r,:r]}V_{[:,:r]}^{\mathsf{T}}$, 其中 $M=U\Sigma V^{\mathsf{T}}$ 是 $M$ 的奇异值分解.
+
+这两个结果都有很广泛的应用, 但都没有显式地引入 $\tilde{M}$ 和 $M$ 结构上的关联, 这就导致了很难直观看到这两个矩阵的关联, 即 $\tilde{M}$ 的可解释性不强.
+
+此外, 如果目标中包含非线性运算, 通常也不允许我们使用任意实投影矩阵来降维, 而是要求使用**选择矩阵 (Selective Matrix)**, 比如 $\phi(XW)S = \phi(XWS)$ 对于任意矩阵 $S$ 不是恒成立的, 但对于选择矩阵 $S$ 是恒成立的.
+
+所以, 下面关注**选择矩阵约束下的低秩近似**.
+具体来说, 有矩阵 $X\in \mathbb{R}^{n\times l}$, $Y\in \mathbb{R}^{l\times m}$, 然后选定 $M=XY$, 我们的任务是从 $X$ 中选出 $r$ 列, 从 $Y$ 中选出相应的 $r$ 行来构建 $\tilde{M}$, 即
+
+$$
+    \arg\min_{S} \| X_{[:,S]} Y_{[S,:]}-XY\|_F^2\quad \text{s.t.} S\subset \{0,\cdots,l-1\}, |S|=r
+$$
+
+这里的 $S$ 可以理解为 Python 中的切片操作 slice, 我们称 **$X_{[:,S]} Y_{[S,:]}$ 为 $XY$ 的 CR 近似**.
+
+注意这种切片结果也可以用选择矩阵来等价描述, 假设 $X_{[:,S]}$ 的第 $1,2,\cdots,r$ 列分别为 $X$ 的第 $s_1,s_2,\cdots,s_r$ 列, 那么可以定义选择矩阵 $S\in \{0,1\}^{l\times r}$ 如下:
+
+$$
+    S_{i,j}=\begin{cases}
+        1 & i=s_j \\
+        0 & i\neq s_j
+    \end{cases}
+$$
+
+即 $S$ 的第 $j$ 列的第 $s_j$ 个元素为 1, 其余元素为 0.
+这样就有 $X_{[:,S]} = XS$, $Y_{[S,:]} = S^{\mathsf{T}}Y$.
