--- a/Models/Speech_LLM/2023.10.07_LauraGPT.md
+++ b/Models/Speech_LLM/2023.10.07_LauraGPT.md
@@ -65,7 +65,7 @@ Extensive experiments show that ***LauraGPT*** consistently achieves comparable 
 
 Large language models (LLMs) are neural networks that generate natural language texts based on a given context.
 LLMs can learn from massive amounts of text data and mimic human language to acquire human knowledge.
-LLMs such as [GPT-4](../LLM/2023.03.15_GPT-4.md), [PaLM2](../LLM/2023.05.17_PaLM2.md), [LLaMA](../LLM/2023.02.27_LLaMA.md) have demonstrated impressive capabilities across various domains, exhibiting zero-shot generalization without the need for task-specific fine-tuning.
+LLMs such as [GPT-4](../TextLM/2023.03.15_GPT-4.md), [PaLM2](../TextLM/2023.05.17_PaLM2.md), [LLaMA](../TextLM/2023.02.27_LLaMA.md) have demonstrated impressive capabilities across various domains, exhibiting zero-shot generalization without the need for task-specific fine-tuning.
 However, these models are primarily limited to processing text data.
 
 Recent research aims to seamlessly integrate text and audio since they are two important modalities for human communication.
